interpreter-janeklang/tests/bad/03_IntAsString_3.janek
int main(){
    int a = 123;
    string s = a;
    return 0;
}